Implemented a multi-threaded password cracker [#2]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_executable(PasswordCracker
     src/main.cpp
+    src/PasswordCracker.cpp
+    src/HashAlgorithms.h
 )
 
 target_link_libraries(PasswordCracker cryptopp)
